--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -9,11 +9,14 @@
 #    Author: Soham Patel
 
 
-source = ~/.cache/wal/colors-hyprland.conf
+# source = ~/.cache/wal/colors-hyprland.conf
+source = ./colors.conf
 general{
 }
 # $font = JetBrainsMono Nerd Font
 $font = Product Sans
+$time_font = Momo Trust Display
+# $font1 = Momo Trust Display
 # $font = Geist Mono
 
 # background {
@@ -27,28 +30,50 @@ $font = Product Sans
 
 background {
     monitor =
-    path = $HOME/.current_wallpaper
+    path = $image
     # color = "#FFFFFF"
 
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
-    # blur_size = 4
-    blur_passes = 2 # 0 disables blurring
-    # noise = 0.0117
-    # contrast = 1.3000 # Vibrant!!!
-    # brightness = 0.8000
-    vibrancy = 0.2100
+    blur_size = 7
+    blur_passes = 4 # 0 disables blurring
+    noise = 0.0117
+    contrast = 1.3000 # Vibrant!!!
+    brightness = 0.5000
+    # vibrancy = 0.2100
     vibrancy_darkness = 0.0
 }
+# label {
+#     monitor =
+#     text = cmd[update:1000] echo "<span>$(date +"%I:%M")</span>"
+#     color = rgba(216, 222, 233, .1)
+#     color = $primary
+#     font_size = 250
+#     font_family = Ultra # Momo Trust Display
+#     position = 0, 370
+#     halign = center
+#     valign = center
+# }
+# label {
+#     monitor = eDP-1
+#     text = cmd[update:43200000] date +"%A, %d %B"
+#     color = $secondary
+#     font_size = 30
+#     font_family = $font
+
+#     position = 0,0
+#     halign = center
+#     valign = center
+# }
 
 # Hours
 label {
     monitor = eDP-1
     text = cmd[update:1000] echo "<b><big> $(date +"%I") </big></b>"
-    color = $color6
+    color = $primary
     font_size = 200
-    font_family = $font
-    shadow_passes = 4
-    shadow_size = 5
+    font_family = $time_font
+    # shadow_passes = 4
+    # shadow_size = 3
 
     position = 0, 23%
     halign = center
@@ -59,11 +84,11 @@ label {
 label {
     monitor = eDP-1
     text = cmd[update:1000] echo "<b><big> $(date +"%M") </big></b>"
-    color = $color6
+    color = $primary
     font_size = 200
-    font_family = $font
-    shadow_passes = 4
-    shadow_size = 5
+    font_family = $time_font
+    # shadow_passes = 4
+    # shadow_size = 5
 
     position = 0, 10%
     halign = center
@@ -75,7 +100,7 @@ label {
 label {
     monitor = eDP-1
     text = cmd[update:43200000] date +"%A, %d %B"
-    color = $color7
+    color = $secondary
     font_size = 30
     font_family = $font
 
@@ -96,9 +121,9 @@ input-field {
     dots_center = true
 
     rounding = 22
-    outer_color = $color0
-    inner_color = $color0
-    font_color = $color6
+    outer_color = $primary
+    inner_color = $surface
+    font_color = $on_surface
     fade_on_empty = true
     placeholder_text = <i>Password...</i> # Text rendered in the input box when it's empty.
 
