--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -30,7 +30,7 @@
     // "workbench.experimental.layoutControl.enabled": true,
     "explorer.confirmDelete": false,
     "[cpp]": {
-        "editor.defaultFormatter": "llvm-vs-code-extensions.vscode-clangd"
+        "editor.defaultFormatter": "ms-vscode.cpptools"
     },
     "codesnap.shutterAction": "copy",
     "leetcode.endpoint": "leetcode",
