--- a/.config/hypr/colors.conf
+++ b/.config/hypr/colors.conf
@@ -1,103 +1,103 @@
 
-$image = /home/sohampatel/.current_wallpaper
+$image = /home/sohampatel/Pictures/wallpaper/9.jpg
 
-$background = rgba(1a1111ff)
+$background = rgba(1a1110ff)
 
 $error = rgba(ffb4abff)
 
 $error_container = rgba(93000aff)
 
-$inverse_on_surface = rgba(382e2eff)
+$inverse_on_surface = rgba(392e2cff)
 
-$inverse_primary = rgba(8f4a4dff)
+$inverse_primary = rgba(904b40ff)
 
-$inverse_surface = rgba(f0dedeff)
+$inverse_surface = rgba(f1dfdbff)
 
-$on_background = rgba(f0dedeff)
+$on_background = rgba(f1dfdbff)
 
 $on_error = rgba(690005ff)
 
 $on_error_container = rgba(ffdad6ff)
 
-$on_primary = rgba(561d21ff)
+$on_primary = rgba(561e16ff)
 
-$on_primary_container = rgba(ffdadaff)
+$on_primary_container = rgba(ffdad4ff)
 
-$on_primary_fixed = rgba(3b080eff)
+$on_primary_fixed = rgba(3a0905ff)
 
-$on_primary_fixed_variant = rgba(733336ff)
+$on_primary_fixed_variant = rgba(73342aff)
 
-$on_secondary = rgba(44292aff)
+$on_secondary = rgba(442925ff)
 
-$on_secondary_container = rgba(ffdadaff)
+$on_secondary_container = rgba(ffdad4ff)
 
-$on_secondary_fixed = rgba(2c1516ff)
+$on_secondary_fixed = rgba(2c1511ff)
 
-$on_secondary_fixed_variant = rgba(5d3f40ff)
+$on_secondary_fixed_variant = rgba(5d3f3aff)
 
-$on_surface = rgba(f0dedeff)
+$on_surface = rgba(f1dfdbff)
 
-$on_surface_variant = rgba(d7c1c1ff)
+$on_surface_variant = rgba(d8c2beff)
 
-$on_tertiary = rgba(422c05ff)
+$on_tertiary = rgba(3e2e04ff)
 
-$on_tertiary_container = rgba(ffddb0ff)
+$on_tertiary_container = rgba(fbe0a6ff)
 
-$on_tertiary_fixed = rgba(281800ff)
+$on_tertiary_fixed = rgba(251a00ff)
 
-$on_tertiary_fixed_variant = rgba(5b421aff)
+$on_tertiary_fixed_variant = rgba(564419ff)
 
-$outline = rgba(9f8c8cff)
+$outline = rgba(a08c89ff)
 
-$outline_variant = rgba(524343ff)
+$outline_variant = rgba(534341ff)
 
-$primary = rgba(ffb3b4ff)
+$primary = rgba(ffb4a8ff)
 
-$primary_container = rgba(733336ff)
+$primary_container = rgba(73342aff)
 
-$primary_fixed = rgba(ffdadaff)
+$primary_fixed = rgba(ffdad4ff)
 
-$primary_fixed_dim = rgba(ffb3b4ff)
+$primary_fixed_dim = rgba(ffb4a8ff)
 
 $scrim = rgba(000000ff)
 
-$secondary = rgba(e6bdbdff)
+$secondary = rgba(e7bdb6ff)
 
-$secondary_container = rgba(5d3f40ff)
+$secondary_container = rgba(5d3f3aff)
 
-$secondary_fixed = rgba(ffdadaff)
+$secondary_fixed = rgba(ffdad4ff)
 
-$secondary_fixed_dim = rgba(e6bdbdff)
+$secondary_fixed_dim = rgba(e7bdb6ff)
 
 $shadow = rgba(000000ff)
 
-$source_color = rgba(ae3944ff)
+$source_color = rgba(a24d40ff)
 
-$surface = rgba(1a1111ff)
+$surface = rgba(1a1110ff)
 
-$surface_bright = rgba(413736ff)
+$surface_bright = rgba(423735ff)
 
-$surface_container = rgba(271d1dff)
+$surface_container = rgba(271d1cff)
 
-$surface_container_high = rgba(322828ff)
+$surface_container_high = rgba(322826ff)
 
-$surface_container_highest = rgba(3d3232ff)
+$surface_container_highest = rgba(3d3230ff)
 
-$surface_container_low = rgba(221919ff)
+$surface_container_low = rgba(231918ff)
 
-$surface_container_lowest = rgba(140c0cff)
+$surface_container_lowest = rgba(140c0bff)
 
-$surface_dim = rgba(1a1111ff)
+$surface_dim = rgba(1a1110ff)
 
-$surface_tint = rgba(ffb3b4ff)
+$surface_tint = rgba(ffb4a8ff)
 
-$surface_variant = rgba(524343ff)
+$surface_variant = rgba(534341ff)
 
-$tertiary = rgba(e5c18dff)
+$tertiary = rgba(dec48cff)
 
-$tertiary_container = rgba(5b421aff)
+$tertiary_container = rgba(564419ff)
 
-$tertiary_fixed = rgba(ffddb0ff)
+$tertiary_fixed = rgba(fbe0a6ff)
 
-$tertiary_fixed_dim = rgba(e5c18dff)
+$tertiary_fixed_dim = rgba(dec48cff)
 
