--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -17,7 +17,7 @@
 # Create your files separately and then link them to this file like this:
 # source = ~/.config/hypr/myColors.conf
 
-source= ~/.cache/wal/colors-hyprland.conf
+# source= ~/.cache/wal/colors-hyprland.conf
 source= ./colors.conf
 ################
 ### MONITORS ###
@@ -91,8 +91,8 @@ general {
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    # col.active_border = $primary $primary $secondary 45deg
-    col.active_border = $color1 $color1 $color3 45deg
+    col.active_border = $primary $tertiary 45deg
+    # col.active_border = $color1 $color1 $color3 45deg
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -385,9 +385,11 @@ layerrule = blur, rofi
 windowrulev2 = float, title:^(.*Hyprshot.*)$
 windowrulev2 = opacity 0.90,class:^(code)$
 windowrulev2 = opacity 0.93,class:^(dev.zed.Zed)$
-windowrulev2 = opacity 0.90,class:^(org.gnome.Nautilus)$
+windowrulev2 = opacity 0.80,class:^(org.gnome.Nautilus)$
 windowrulev2 = opacity 0.85,class:^(net.thunderbird.Thunderbird)$
-windowrulev2 = opacity, 0.85, class:^(org.telegram.desktop)$
+windowrulev2 = opacity 0.85, class:^(org.telegram.desktop)$
+windowrulev2 = opacity 0.80, class:^(Alacritty)$
+
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
 
@@ -399,7 +401,6 @@ layerrule = noanim, hyprpicker
 layerrule = noanim, selection
 
 
-windowrulev2 = opacity 0.7 override, class:^(kitty)$
 # windowrulev2 = opacity 0.80 0.80,class:^(zen)$
 windowrulev2 = float, class:^(blueman-manager)$
 windowrulev2 = size 400 400, class:^(blueman-manager)$
