--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 
 
+
+
+.config/Code/*
+
+!.config/Code/User/
+
 .config/Code/User/workspaceStorage/
 .config/Code/User/globalStorage/
 .config/Code/User/History/
