--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -365,7 +365,7 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
 # common modals
-windowrule = float,initialtitle:^(Open File)$
+windowrule = float,initialTitle:^(Open File)$
 windowrule = float,initialTitle:^(Open File)$
 windowrule = float,title:^(Choose Files)$
 windowrule = float,title:^(Save As)$
