--- a/.config/hypr/colors.conf
+++ b/.config/hypr/colors.conf
@@ -1,103 +1,103 @@
 
-$image = /home/soham/Pictures/wallpaper/26.jpg
+$image = /home/soham/Pictures/wallpaper/Fantasy-Garden.png
 
-$background = rgba(1a120dff)
+$background = rgba(15130cff)
 
 $error = rgba(ffb4abff)
 
 $error_container = rgba(93000aff)
 
-$inverse_on_surface = rgba(382e29ff)
+$inverse_on_surface = rgba(333027ff)
 
-$inverse_primary = rgba(8c4e28ff)
+$inverse_primary = rgba(695f11ff)
 
-$inverse_surface = rgba(f0dfd7ff)
+$inverse_surface = rgba(e8e2d5ff)
 
-$on_background = rgba(f0dfd7ff)
+$on_background = rgba(e8e2d5ff)
 
 $on_error = rgba(690005ff)
 
 $on_error_container = rgba(ffdad6ff)
 
-$on_primary = rgba(532200ff)
+$on_primary = rgba(373100ff)
 
-$on_primary_container = rgba(ffdbc9ff)
+$on_primary_container = rgba(f3e489ff)
 
-$on_primary_fixed = rgba(331200ff)
+$on_primary_fixed = rgba(201c00ff)
 
-$on_primary_fixed_variant = rgba(6f3813ff)
+$on_primary_fixed_variant = rgba(504700ff)
 
-$on_secondary = rgba(432b1dff)
+$on_secondary = rgba(353117ff)
 
-$on_secondary_container = rgba(ffdbc9ff)
+$on_secondary_container = rgba(ebe3bdff)
 
-$on_secondary_fixed = rgba(2b160aff)
+$on_secondary_fixed = rgba(1f1c05ff)
 
-$on_secondary_fixed_variant = rgba(5c4132ff)
+$on_secondary_fixed_variant = rgba(4c472bff)
 
-$on_surface = rgba(f0dfd7ff)
+$on_surface = rgba(e8e2d5ff)
 
-$on_surface_variant = rgba(d7c2b9ff)
+$on_surface_variant = rgba(ccc6b5ff)
 
-$on_tertiary = rgba(343208ff)
+$on_tertiary = rgba(113725ff)
 
-$on_tertiary_container = rgba(eae5abff)
+$on_tertiary_container = rgba(c3ecd2ff)
 
-$on_tertiary_fixed = rgba(1e1c00ff)
+$on_tertiary_fixed = rgba(002112ff)
 
-$on_tertiary_fixed_variant = rgba(4b481dff)
+$on_tertiary_fixed_variant = rgba(294e3bff)
 
-$outline = rgba(9f8d84ff)
+$outline = rgba(959181ff)
 
-$outline_variant = rgba(52443cff)
+$outline_variant = rgba(4a4739ff)
 
-$primary = rgba(ffb68eff)
+$primary = rgba(d6c871ff)
 
-$primary_container = rgba(6f3813ff)
+$primary_container = rgba(504700ff)
 
-$primary_fixed = rgba(ffdbc9ff)
+$primary_fixed = rgba(f3e489ff)
 
-$primary_fixed_dim = rgba(ffb68eff)
+$primary_fixed_dim = rgba(d6c871ff)
 
 $scrim = rgba(000000ff)
 
-$secondary = rgba(e6beaaff)
+$secondary = rgba(cfc7a2ff)
 
-$secondary_container = rgba(5c4132ff)
+$secondary_container = rgba(4c472bff)
 
-$secondary_fixed = rgba(ffdbc9ff)
+$secondary_fixed = rgba(ebe3bdff)
 
-$secondary_fixed_dim = rgba(e6beaaff)
+$secondary_fixed_dim = rgba(cfc7a2ff)
 
 $shadow = rgba(000000ff)
 
-$source_color = rgba(e77426ff)
+$source_color = rgba(d4c564ff)
 
-$surface = rgba(1a120dff)
+$surface = rgba(15130cff)
 
-$surface_bright = rgba(413732ff)
+$surface_bright = rgba(3b3930ff)
 
-$surface_container = rgba(271e19ff)
+$surface_container = rgba(212017ff)
 
-$surface_container_high = rgba(312823ff)
+$surface_container_high = rgba(2c2a21ff)
 
-$surface_container_highest = rgba(3d332eff)
+$surface_container_highest = rgba(37352cff)
 
-$surface_container_low = rgba(221a15ff)
+$surface_container_low = rgba(1d1c13ff)
 
-$surface_container_lowest = rgba(140d08ff)
+$surface_container_lowest = rgba(100e07ff)
 
-$surface_dim = rgba(1a120dff)
+$surface_dim = rgba(15130cff)
 
-$surface_tint = rgba(ffb68eff)
+$surface_tint = rgba(d6c871ff)
 
-$surface_variant = rgba(52443cff)
+$surface_variant = rgba(4a4739ff)
 
-$tertiary = rgba(cdc991ff)
+$tertiary = rgba(a7d0b6ff)
 
-$tertiary_container = rgba(4b481dff)
+$tertiary_container = rgba(294e3bff)
 
-$tertiary_fixed = rgba(eae5abff)
+$tertiary_fixed = rgba(c3ecd2ff)
 
-$tertiary_fixed_dim = rgba(cdc991ff)
+$tertiary_fixed_dim = rgba(a7d0b6ff)
 
