--- a/.config/hyprpanel/config.json
+++ b/.config/hyprpanel/config.json
@@ -1,13 +1,13 @@
 {
   "bar.customModules.updates.pollingInterval": 1440000,
   "scalingPriority": "hyprland",
-  "theme.font.size": "0.8rem",
+  "theme.font.size": "0.85rem",
   "tear": false,
   "theme.font.name": "JetBrainsMono Nerd Font Propo",
   "theme.font.label": "JetBrainsMono Nerd Font Propo",
   "theme.font.style": "normal",
   "theme.bar.floating": true,
-  "bar.launcher.icon": "",
+  "bar.launcher.icon": "󰣇",
   "theme.bar.buttons.enableBorders": false,
   "theme.bar.outer_spacing": "0.5em",
   "wallpaper.pywal": false,
