--- a/.config/matugen/config.toml
+++ b/.config/matugen/config.toml
@@ -29,6 +29,9 @@ input_path = '~/.config/matugen/templates/colors.css'
 output_path = '~/.config/waybar/colors.css'
 post_hook = 'pkill -SIGUSR2 waybar'
 
+[templates.wlogout]
+input_path = '~/.config/matugen/templates/colors.css'
+output_path = '~/.config/wlogout/colors.css'
 # [templates.kitty]
 # input_path = './templates/kitty-colors.conf'
 # output_path = '~/.config/kitty/colors.conf'
