--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -55,16 +55,17 @@ $rofiswitch = ~/.config/rofi/rofi_wswitch
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = gsettings set org.gnome.desktop.interface cursor-theme Adwaita
+# exec-once = gsettings set org.gnome.desktop.interface cursor-theme Adwaita
 exec-once = hypridle
-exec-once = hyprpanel
+# exec-once = hyprpanel
+exec-once = waybar
 # exec-once = hyprpm reload
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 exec-once = nm-applet --indicator
 exec-once = $wallpaper
 exec-once = systemctl --user start hyprpolkitagent
-exec-once = qs -c overview
+# exec-once = qs -c overview
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
@@ -99,7 +100,7 @@ general {
     resize_on_border = false
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = false 
+    allow_tearing = true
 
     layout = dwindle
 }
@@ -313,7 +314,7 @@ bind = $mainMod ALT,  down, movewindow, d
 
 #custom
 bind = $mainMod ,W, exec, $wallpaper
-bind = $mainMod, O, exec, qs ipc -c overview call overview toggle
+# bind = $mainMod, O, exec, qs ipc -c overview call overview toggle
 bind = $mainMod ALT, W, exec, $wall_selector
 bind = $mainMod ,V, exec, $clipboard
 bind = $mainMod ALT,V, exec, $clipboard_alt
@@ -323,10 +324,11 @@ bind = ALT, SPACE, exec, $menu
 bind = ,Print, exec, $screenshot
 bind = $mainMod, X, exec , $powermenu
 
-bind = $mainMod SHIFT, H, exec , hyprpanel -q; hyprpanel
-bind = $mainMod, H, exec, hyprpanel toggleWindow bar-0
+# bind = $mainMod ALT, H, exec , hyprpanel -q; hyprpanel
+# bind = $mainMod, H, exec, hyprpanel toggleWindow bar-0
 
-
+bind = $mainMod ALT, H, exec , killall waybar; waybar
+bind = $mainMod, H, exec, bash -c "kill -SIGUSR1 $(pidof waybar)"
 bind = ALT, TAB, exec, $rofiswitch
 bind = $mainMod, TAB, workspace, previous
 
@@ -381,7 +383,7 @@ windowrulev2 = float,class:^(xdg-desktop-portal-gtk)$
 
 blurls = rofi
 layerrule = blur, rofi
-
+layerrule = blur, waybar
 windowrulev2 = float, title:^(.*Hyprshot.*)$
 windowrulev2 = opacity 0.90,class:^(code)$
 windowrulev2 = opacity 0.93,class:^(dev.zed.Zed)$
