--- a/.config/hyprpanel/config.json
+++ b/.config/hyprpanel/config.json
@@ -15,7 +15,7 @@
   "theme.bar.menus.opacity": 100,
   "theme.bar.transparent": true,
   "theme.matugen": false,
-  "wallpaper.image": "/home/sohampatel/.current_wallpaper",
+  "wallpaper.image": "/home/soham/.current_wallpaper",
   "theme.bar.buttons.y_margins": "0em",
   "bar.layouts": {
     "0": {
