--- a/.config/hypr/colors.conf
+++ b/.config/hypr/colors.conf
@@ -1,103 +1,103 @@
 
-$image = /home/soham/Pictures/wallpaper/Fantasy-Garden.png
+$image = /home/soham/Pictures/wallpaper/40.jpg
 
-$background = rgba(15130cff)
+$background = rgba(101418ff)
 
 $error = rgba(ffb4abff)
 
 $error_container = rgba(93000aff)
 
-$inverse_on_surface = rgba(333027ff)
+$inverse_on_surface = rgba(2d3135ff)
 
-$inverse_primary = rgba(695f11ff)
+$inverse_primary = rgba(31628dff)
 
-$inverse_surface = rgba(e8e2d5ff)
+$inverse_surface = rgba(e0e2e8ff)
 
-$on_background = rgba(e8e2d5ff)
+$on_background = rgba(e0e2e8ff)
 
 $on_error = rgba(690005ff)
 
 $on_error_container = rgba(ffdad6ff)
 
-$on_primary = rgba(373100ff)
+$on_primary = rgba(003355ff)
 
-$on_primary_container = rgba(f3e489ff)
+$on_primary_container = rgba(cfe5ffff)
 
-$on_primary_fixed = rgba(201c00ff)
+$on_primary_fixed = rgba(001d34ff)
 
-$on_primary_fixed_variant = rgba(504700ff)
+$on_primary_fixed_variant = rgba(124a73ff)
 
-$on_secondary = rgba(353117ff)
+$on_secondary = rgba(243240ff)
 
-$on_secondary_container = rgba(ebe3bdff)
+$on_secondary_container = rgba(d5e4f7ff)
 
-$on_secondary_fixed = rgba(1f1c05ff)
+$on_secondary_fixed = rgba(0e1d2aff)
 
-$on_secondary_fixed_variant = rgba(4c472bff)
+$on_secondary_fixed_variant = rgba(3a4857ff)
 
-$on_surface = rgba(e8e2d5ff)
+$on_surface = rgba(e0e2e8ff)
 
-$on_surface_variant = rgba(ccc6b5ff)
+$on_surface_variant = rgba(c2c7cfff)
 
-$on_tertiary = rgba(113725ff)
+$on_tertiary = rgba(392a49ff)
 
-$on_tertiary_container = rgba(c3ecd2ff)
+$on_tertiary_container = rgba(f0dbffff)
 
-$on_tertiary_fixed = rgba(002112ff)
+$on_tertiary_fixed = rgba(231532ff)
 
-$on_tertiary_fixed_variant = rgba(294e3bff)
+$on_tertiary_fixed_variant = rgba(504060ff)
 
-$outline = rgba(959181ff)
+$outline = rgba(8c9199ff)
 
-$outline_variant = rgba(4a4739ff)
+$outline_variant = rgba(42474eff)
 
-$primary = rgba(d6c871ff)
+$primary = rgba(9dcbfbff)
 
-$primary_container = rgba(504700ff)
+$primary_container = rgba(124a73ff)
 
-$primary_fixed = rgba(f3e489ff)
+$primary_fixed = rgba(cfe5ffff)
 
-$primary_fixed_dim = rgba(d6c871ff)
+$primary_fixed_dim = rgba(9dcbfbff)
 
 $scrim = rgba(000000ff)
 
-$secondary = rgba(cfc7a2ff)
+$secondary = rgba(b9c8daff)
 
-$secondary_container = rgba(4c472bff)
+$secondary_container = rgba(3a4857ff)
 
-$secondary_fixed = rgba(ebe3bdff)
+$secondary_fixed = rgba(d5e4f7ff)
 
-$secondary_fixed_dim = rgba(cfc7a2ff)
+$secondary_fixed_dim = rgba(b9c8daff)
 
 $shadow = rgba(000000ff)
 
-$source_color = rgba(d4c564ff)
+$source_color = rgba(232c36ff)
 
-$surface = rgba(15130cff)
+$surface = rgba(101418ff)
 
-$surface_bright = rgba(3b3930ff)
+$surface_bright = rgba(36393eff)
 
-$surface_container = rgba(212017ff)
+$surface_container = rgba(1d2024ff)
 
-$surface_container_high = rgba(2c2a21ff)
+$surface_container_high = rgba(272a2fff)
 
-$surface_container_highest = rgba(37352cff)
+$surface_container_highest = rgba(32353aff)
 
-$surface_container_low = rgba(1d1c13ff)
+$surface_container_low = rgba(181c20ff)
 
-$surface_container_lowest = rgba(100e07ff)
+$surface_container_lowest = rgba(0b0e12ff)
 
-$surface_dim = rgba(15130cff)
+$surface_dim = rgba(101418ff)
 
-$surface_tint = rgba(d6c871ff)
+$surface_tint = rgba(9dcbfbff)
 
-$surface_variant = rgba(4a4739ff)
+$surface_variant = rgba(42474eff)
 
-$tertiary = rgba(a7d0b6ff)
+$tertiary = rgba(d4bee6ff)
 
-$tertiary_container = rgba(294e3bff)
+$tertiary_container = rgba(504060ff)
 
-$tertiary_fixed = rgba(c3ecd2ff)
+$tertiary_fixed = rgba(f0dbffff)
 
-$tertiary_fixed_dim = rgba(a7d0b6ff)
+$tertiary_fixed_dim = rgba(d4bee6ff)
 
