--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -1,139 +1,131 @@
 {
-    // "layer": "top", // Set bar layer: "top", "bottom", "overlay"
-    // "position": "top", // Set bar position: "top", "bottom", "left", "right"
-    "height": 0,
-    "spacing": 4,
-    "margin": "0 0 0 0",
-    "modules-left": [
-        "group/date_time",
-        "hyprland/workspaces"
-    ],
-    "modules-center": [
-        "hyprland/window"
-    ],
-    "modules-right": [
-        "tray",
-        "group/net",
-        "group/resources"
-    ],
-    "hyprland/workspaces": {
-        "on-click": "activate"
-        // "format": "{icon}",
-        // "format-icons": {
-        //     "1": "", // Firefox
-        //     "2": "", // Code
-        //     "3": "", // Terminal
-        //     "4": "", // File Manager
-        //     "5": "", // Chat
-        //     "default": ""
-        // }
+  "reload_style_on_change": true,
+  "layer": "bottom",
+  "position": "bottom",
+  "spacing": 0,
+  "height": 26,
+  "modules-left": ["custom/arch", "hyprland/workspaces"],
+  "modules-center": ["clock",  "custom/screenrecording-indicator"],
+  "modules-right": [
+    "group/tray-expander",
+    "bluetooth",
+    "network",
+    "pulseaudio",
+    "battery"
+  ],
+  "hyprland/workspaces": {
+    "on-click": "activate",
+    "format": "{icon}",
+    "format-icons": {
+      "default": "",
+      "1": "1",
+      "2": "2",
+      "3": "3",
+      "4": "4",
+      "5": "5",
+      "6": "6",
+      "7": "7",
+      "8": "8",
+      "9": "9",
+      "10": "0",
+      // "active": "󱓻"
     },
-    "hyprland/window": {
-        "format": "{initialTitle}",
-        "rewrite": {
-            "firefox": "  Firefox",
-            "code": "󰨞  VS Code",
-            "kitty": "  Terminal",
-            "thunar": "  Files"
-        },
-        "separate-outputs": true
-    },
-    "group/date_time": {
-        "orientation": "horizontal",
-        "modules": [
-            "clock#date",
-            "clock#time"
-        ]
-    },
-    "clock#date": {
-        "format": "󰸗 {:%d %b}",
-        "tooltip-format": "{:%A, %d %B %Y %I:%M:%S %p}"
-    },
-    "clock#time": {
-        "format": " {:%I:%M %p}",
-        "tooltip-format": "{:%A, %d %B %Y %I:%M:%S %p}"
-    },
-    "group/net": {
-        "orientation": "horizontal",
-        "modules": [
-            "network",
-            "bluetooth"
-        ]
-    },
-    "group/resources": {
-        "orientation": "horizontal",
-        "modules": [
-            "battery",
-            "pulseaudio"
-        ]
-    },
-    "pulseaudio": {
-        "format": "{icon} {volume}%",
-        "format-bluetooth": "{icon} {volume}%",
-        "format-muted": " {volume}%",
-        "format-icons": {
-            "alsa_output.pci-0000_00_1f.3.analog-stereo": "",
-            "alsa_output.pci-0000_00_1f.3.analog-stereo-muted": "",
-            "headphone": "",
-            "hands-free": "",
-            "headset": "",
-            "phone": "",
-            "phone-muted": "",
-            "portable": "",
-            "car": "",
-            "default": [
-                "󰕿",
-                "󰖀",
-                "󰕾"
-            ]
-        },
-        "scroll-step": 1,
-        "on-click": "pavucontrol",
-        "ignored-sinks": [
-            "Easy Effects Sink"
-        ]
-    },
-    "battery": {
-        "interval": 60,
-        "states": {
-            "warning": 30,
-            "critical": 15
-        },
-        "format": "{icon} {capacity}%",
-        "format-icons": [
-            "󰁺",
-            "󰁻",
-            "󰁼",
-            "󰁾",
-            "󰁿",
-            "󰂀",
-            "󰂁",
-            "󰂂",
-            "󰁹"
-        ],
-        "max-length": 25
-    },
-    "network": {
-        "format": "{ifname}",
-        "format-wifi": " {essid}",
-        "format-ethernet": "󰊗 {ipaddr}/{cidr}",
-        "format-disconnected": "", //An empty format will hide the module.
-        "tooltip-format": "{ifname} via {gwaddr} 󰊗",
-        "tooltip-format-wifi": " {essid} ({signalStrength}%)",
-        "tooltip-format-ethernet": "{ifname} ",
-        "tooltip-format-disconnected": "Disconnected",
-        "max-length": 50,
-        "on-click": "nm-applet --indicator"
-    },
-    "bluetooth": {
-        // "controller": "controller1", // specify the alias of the controller if there are more than 1 on the system
-        "format": "",
-        "format-off": "",
-        "format-disabled": "",
-        "format-connected": "󰂱",
-        "tooltip-format": "{controller_alias}\t{controller_address}",
-        "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{device_enumerate}",
-        "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
-        "on-click": "blueman-manager"
+    "persistent-workspaces": {
+      "1": [],
+      "2": [],
+      "3": [],
+      "4": [],
+      "5": []
     }
+  },
+  "custom/arch": {
+    "format": "󰣇",
+    // "on-click": "omarchy-menu",
+    // "on-click-right": "xdg-terminal-exec",
+    // "tooltip-format": "Omarchy Menu\n\nSuper + Alt + Space"
+  },
+
+  "cpu": {
+    "interval": 5,
+    "format": "󰍛",
+    "on-click": "omarchy-launch-or-focus-tui btop"
+  },
+  "clock": {
+    "format": "{:L%A %I:%M}",
+    "format-alt": "{:L%d %B W%V %Y}",
+    "tooltip": false,
+  },
+  "network": {
+    "format-icons": ["󰤯", "󰤟", "󰤢", "󰤥", "󰤨"],
+    "format": "{icon}",
+    "format-wifi": "{icon}",
+    "format-ethernet": "󰀂",
+    "format-disconnected": "󰤮",
+    "tooltip-format-wifi": "{essid} ({frequency} GHz)\n⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
+    "tooltip-format-ethernet": "⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
+    "tooltip-format-disconnected": "Disconnected",
+    "interval": 3,
+    "spacing": 1,
+    "on-click": "omarchy-launch-wifi"
+  },
+  "battery": {
+    "format": "{capacity}% {icon}",
+    "format-discharging": "{icon} {capacity}%",
+    "format-charging": "{icon} {capacity}%",
+    "format-plugged": "",
+    "format-icons": {
+      "charging": ["󰢜", "󰂆", "󰂇", "󰂈", "󰢝", "󰂉", "󰢞", "󰂊", "󰂋", "󰂅"],
+      "default": ["󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"]
+    },
+    "format-full": "󰂅",
+    "tooltip-format-discharging": "{power:>1.0f}W↓ {capacity}%",
+    "tooltip-format-charging": "{power:>1.0f}W↑ {capacity}%",
+    "interval": 5,
+    // "on-click": "omarchy-menu power",
+    "states": {
+      "warning": 20,
+      "critical": 10
+    }
+  },
+  "bluetooth": {
+    "format": "",
+    "format-disabled": "󰂲",
+    "format-connected": "󰂱",
+    "format-no-controller": "",
+    "tooltip-format": "Devices connected: {num_connections}",
+    "on-click": "blueman-manager"
+  },
+  "pulseaudio": {
+    "format": "{icon} {volume}%",
+    "on-click": "omarchy-launch-or-focus-tui wiremix",
+    "on-click-right": "pamixer -t",
+    "tooltip-format": "Playing at {volume}%",
+    "scroll-step": 5,
+    "format-muted": "",
+    "format-icons": {
+      "default": ["", "", ""]
+    }
+  },
+  "group/tray-expander": {
+    "orientation": "inherit",
+    "drawer": {
+      "transition-duration": 600,
+      "children-class": "tray-group-item"
+    },
+    "modules": ["custom/expand-icon", "tray"]
+  },
+  "custom/expand-icon": {
+    "format": "",
+    "tooltip": false
+  },
+  "custom/screenrecording-indicator": {
+    "on-click": "omarchy-cmd-screenrecord",
+    "exec": "$OMARCHY_PATH/default/waybar/indicators/screen-recording.sh",
+    "signal": 8,
+    "return-type": "json"
+  },
+  "tray": {
+    "icon-size": 12,
+    "spacing": 17
+  }
 }
