--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -59,6 +59,7 @@ $rofiswitch = ~/.config/rofi/rofi_wswitch
 exec-once = hypridle
 # exec-once = hyprpanel
 exec-once = waybar
+exec-once = swayosd-server
 # exec-once = hyprpm reload
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
@@ -346,12 +347,18 @@ bind = $mainMod CTRL, down, movecurrentworkspacetomonitor, d
 # bindl = , switch:Lid Switch, exec, systemctl suspend
 
 # Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+# bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+# bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+# bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 5%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 5%-
+# bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 5%+
+# bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 5%-
+
+bindl = ,XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
+bindle =, XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise
+bindle =, XF86AudioLowerVolume, exec, swayosd-client --output-volume lower
+bindle =, XF86MonBrightnessUp, exec, swayosd-client --brightness +5
+bindle =, XF86MonBrightnessDown, exec, swayosd-client --brightness -5
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
@@ -406,13 +413,16 @@ layerrule = noanim, selection
 # windowrulev2 = opacity 0.80 0.80,class:^(zen)$
 windowrulev2 = float, class:^(blueman-manager)$
 windowrulev2 = size 400 400, class:^(blueman-manager)$
-windowrulev2 = move 100%-w-70 40, class:^(blueman-manager)$
+windowrulev2 = move 100%-w-75 100%-w-35, class:^(blueman-manager)$
 
 windowrulev2 = float, class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = size 400 800, class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = move 100%-w-10 40, class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = float, title:^(.*Network Manager.*)$
 
+windowrulev2 = float, class:^(org.netrs.ui)$
+windowrulev2 = size 400 500, class:^(org.netrs.ui)$
+windowrulev2 = move 100%-w-10 100%-w-35, class:^(org.netrs.ui)$
 
 windowrulev2 = opacity 0.9 override, class:^(clipboard)$
 windowrulev2 = float,  class:^clipboard$
