--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -48,7 +48,6 @@
   "cpu": {
     "interval": 5,
     "format": "󰍛",
-    "on-click": "omarchy-launch-or-focus-tui btop"
   },
   "clock": {
     "format": "{:L%A %I:%M}",
@@ -66,7 +65,7 @@
     "tooltip-format-disconnected": "Disconnected",
     "interval": 3,
     "spacing": 1,
-    "on-click": "omarchy-launch-wifi"
+    "on-click": "nmrs"
   },
   "battery": {
     "format": "{capacity}% {icon}",
@@ -96,7 +95,7 @@
     "on-click": "blueman-manager"
   },
   "pulseaudio": {
-    "format": "{icon} {volume}%",
+    "format": "{icon}  {volume}%",
     "on-click": "omarchy-launch-or-focus-tui wiremix",
     "on-click-right": "pamixer -t",
     "tooltip-format": "Playing at {volume}%",
@@ -118,13 +117,7 @@
     "format": "",
     "tooltip": false
   },
-  "custom/screenrecording-indicator": {
-    "on-click": "omarchy-cmd-screenrecord",
-    "exec": "$OMARCHY_PATH/default/waybar/indicators/screen-recording.sh",
-    "signal": 8,
-    "return-type": "json"
-  },
-  "tray": {
+ "tray": {
     "icon-size": 12,
     "spacing": 17
   }
