--- a/.config/alacritty/colors.toml
+++ b/.config/alacritty/colors.toml
@@ -1,48 +1,48 @@
 [colors.primary]
-background = '#1a1111'
-foreground = '#f0dede'
+background = '#101418'
+foreground = '#e0e2e8'
  
 [colors.cursor]
-text = '#f0dede'
-cursor = '#d7c1c1' 
+text = '#e0e2e8'
+cursor = '#c2c7ce' 
  
 [colors.vi_mode_cursor]
-text = '#1a1111'
-cursor = '#ffb3b4' 
+text = '#101418'
+cursor = '#99ccfa' 
  
 [colors.search.matches]
-foreground = '#524343' 
-background = '#e6c18d' 
+foreground = '#42474e' 
+background = '#d2bfe7' 
  
 [colors.search.focused_match]
-foreground = '#524343' 
-background = '#ffb3b4' 
+foreground = '#42474e' 
+background = '#99ccfa' 
  
 [colors.footer_bar]
-foreground = '#524343' 
-background = '#f0dede' 
+foreground = '#42474e' 
+background = '#e0e2e8' 
  
 [colors.hints.start]
-foreground = '#524343' 
-background = '#e6bdbd' 
+foreground = '#42474e' 
+background = '#b8c8da' 
  
 [colors.hints.end]
-foreground = '#524343' 
-background = '#e6bdbd' 
+foreground = '#42474e' 
+background = '#b8c8da' 
  
 [colors.selection]
-text = '#1a1111'
-background = '#ffb3b4'
+text = '#101418'
+background = '#99ccfa'
  
  
 [colors.normal]
 black = '#181818' 
 red = '#ffb4ab' 
-green = '#ffb3b4' 
-yellow = '#8f4a4d' 
-blue = '#ffb3b4' 
-magenta = '#e6c18d' 
-cyan = '#e6bdbd' 
+green = '#99ccfa' 
+yellow = '#2c638b' 
+blue = '#99ccfa' 
+magenta = '#d2bfe7' 
+cyan = '#b8c8da' 
 white = '#BAC2DE' 
  
  
