--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -78,7 +78,6 @@ env = HYPRCURSOR_SIZE,24
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
-
 #####################
 ### LOOK AND FEEL ###
 #####################
@@ -226,7 +225,7 @@ input {
 
     touchpad {
         natural_scroll = true
-        scroll_factor = 3
+        scroll_factor = 0.5
     }
 }
 
@@ -241,7 +240,7 @@ device {
 }
 device {
 	name = elan0522:01-04f3:31c3-touchpad
-	sensitivity = 0.5
+	sensitivity = 1
 }
 
 
@@ -328,8 +327,9 @@ bind = $mainMod, X, exec , $powermenu
 # bind = $mainMod ALT, H, exec , hyprpanel -q; hyprpanel
 # bind = $mainMod, H, exec, hyprpanel toggleWindow bar-0
 
-bind = $mainMod ALT, H, exec , killall waybar; waybar
-bind = $mainMod, H, exec, bash -c "kill -SIGUSR1 $(pidof waybar)"
+# bind = $mainMod ALT, H, exec , killall waybar; waybar
+bind = $mainMod, H, exec, pgrep -x waybar >/dev/null && killall waybar || waybar
+# bind = $mainMod, H, exec, bash -c "kill -SIGUSR1 $(pidof waybar)"
 bind = ALT, TAB, exec, $rofiswitch
 bind = $mainMod, TAB, workspace, previous
 
@@ -391,6 +391,8 @@ windowrulev2 = float,class:^(xdg-desktop-portal-gtk)$
 blurls = rofi
 layerrule = blur, rofi
 layerrule = blur, waybar
+layerrule = blur, notifications
+# layerrule = blur, swayosd
 windowrulev2 = float, title:^(.*Hyprshot.*)$
 windowrulev2 = opacity 0.90,class:^(code)$
 windowrulev2 = opacity 0.93,class:^(dev.zed.Zed)$
