--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -1,3 +1,9 @@
 sub-font='Product Sans'
 osc=no
 save-position-on-quit
+vo=gpu
+gpu-context=wayland
+hwdec=vaapi-copy
+video-sync=display-resample
+interpolation=no
+# fullscreen=yes
