--- a/.config/matugen/config.toml
+++ b/.config/matugen/config.toml
@@ -48,10 +48,11 @@ input_path = '~/.config/matugen/templates/tofi-colors'
 output_path = '~/.config/tofi/colors'
 
 
-[templates.vicinae]
-input_path = '~/.config/matugen/templates/vicinae.toml'
-output_path = '~/.local/share/vicinae/themes/matugen.toml'
-post_hook = 'vicinae theme set matugen'
+# [templates.vicinae]
+# input_path = '~/.config/matugen/templates/vicinae.toml'
+# output_path = '~/.local/share/vicinae/themes/matugen.toml'
+# post_hook = 'vicinae theme set matugen'
+
 # [templates.kitty]
 # input_path = './templates/kitty-colors.conf'
 # output_path = '~/.config/kitty/colors.conf'
