--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -297,6 +297,7 @@
         "vscode",
         "vscode-insiders",
         "apps/liveipo-app/src/navigation/TopNavigation.tsx"
-    ]
+    ],
+    "terminal.integrated.suggest.enabled": false
     //end vim settings
 }
