--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -90,7 +90,8 @@ general {
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = $primary $tertiary 45deg
     # col.active_border = $color1 $color1 $color3 45deg
-    col.inactive_border = rgba(595959aa)
+    # col.inactive_border = rgba(595959aa)
+    col.inactive_border = $surface_container_highest
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
@@ -128,7 +129,7 @@ decoration {
 }
 
 cursor {
-    no_hardware_cursors = 1
+    no_hardware_cursors = 2
 }
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 # animations {
@@ -255,6 +256,7 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, B, exec, flatpak run app.zen_browser.zen
 bind = $mainMod, C, exec, code
+bind = $mainMod, Z, exec, zeditor
 bind = $mainMod, F, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
@@ -394,7 +396,7 @@ windowrule = match:title ^(.*Hyprshot.*)$, float on
 windowrule = match:class ^(code)$, opacity 0.90
 windowrule = match:class ^(dev.zed.Zed)$, opacity 0.93
 windowrule = match:class ^(org.gnome.Nautilus)$, opacity 0.80
-windowrule = match:class ^(net.thunderbird.Thunderbird)$, opacity 0.85
+windowrule = match:class ^(org.mozilla.Thunderbird)$, opacity 0.85
 windowrule = match:class ^(org.telegram.desktop)$, opacity 0.85
 windowrule = match:class ^(Alacritty)$, opacity 0.80
 
