updated windowrules for hyprshot

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -392,7 +392,6 @@ layerrule = match:namespace waybar, blur on
 layerrule = match:namespace notifications, blur on
 # layerrule = blur, swayosd
 
-windowrule = match:title ^(.*Hyprshot.*)$, float on
 windowrule = match:class ^(code)$, opacity 0.90
 windowrule = match:class ^(dev.zed.Zed)$, opacity 0.93
 windowrule = match:class ^(org.gnome.Nautilus)$, opacity 0.80
@@ -422,6 +421,14 @@ layerrule = match:namespace hyprpicker, no_anim on
 layerrule = match:namespace selection, no_anim on
 
 # windowrulev2 = opacity 0.80 0.80,class:^(zen)$
+#
+windowrule {
+  name = hyprshot-gui
+  match:title = ^(.*Hyprshot.*)$
+  size = 200 200
+  float = on
+  center = true
+}
 windowrule {
   name = bluetooth-control
   float = on
