added battery to hyprlock and added swaync

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -109,7 +109,17 @@ label {
     valign = center
 }
 
-
+#battery
+label {
+    monitor = eDP-1
+    text = cmd[update:5000] sh -c "~/.config/hypr/scripts/get_battery.sh"
+    color = $outline_variant
+    font_size = 40
+    font_family = $font
+    position = -20, 20
+    halign = right
+    valign = bottom
+}
 
 input-field {
     monitor = eDP-1
@@ -140,9 +150,9 @@ input-field {
 label {
     monitor = HDMI-A-1
     text = cmd[update:1000] echo "<b><big> $(date +"%I") </big></b>"
-    color = $color6
+    color = $primary
     font_size = 100
-    font_family = $font
+    font_family = $time_font
     shadow_passes = 4
     shadow_size = 5
 
@@ -155,9 +165,9 @@ label {
 label {
     monitor = HDMI-A-1
     text = cmd[update:1000] echo "<b><big> $(date +"%M") </big></b>"
-    color = $color6
+    color = $primary
     font_size = 100
-    font_family = $font
+    font_family = $time_font
     shadow_passes = 4
     shadow_size = 5
 
