--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -37,13 +37,13 @@
             "10": "0",
             // "active": "󱓻"
         },
-        "persistent-workspaces": {
-            "1": [],
-            "2": [],
-            "3": [],
-            "4": [],
-            "5": []
-        }
+        // "persistent-workspaces": {
+            // "1": [],
+            // "2": [],
+            // "3": [],
+            // "4": [],
+            // "5": []
+        // }
     },
     "custom/arch": {
         "format": "󰣇",
