--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -270,11 +270,12 @@
         "markdown": false,
         "scminput": false,
         "python": false,
-        "cpp": false
+        "cpp": false,
+        "rust": false
     },
     "vim.useSystemClipboard": true,
     "github.copilot.nextEditSuggestions.enabled": false,
-    "clangd.path": "/home/sohampatel/.config/Code/User/globalStorage/llvm-vs-code-extensions.vscode-clangd/install/20.1.8/clangd_20.1.8/bin/clangd",
+    "clangd.path": "/home/soham/.config/Code/User/globalStorage/llvm-vs-code-extensions.vscode-clangd/install/21.1.0/clangd_21.1.0/bin/clangd",
     "explorer.compactFolders": false,
     "[proto3]": {
         "editor.defaultFormatter": "zxh404.vscode-proto3"
