--- a/.config/alacritty/colors.toml
+++ b/.config/alacritty/colors.toml
@@ -1,48 +1,48 @@
 [colors.primary]
-background = '#111418'
-foreground = '#e1e2e8'
+background = '#1a120e'
+foreground = '#f0dfd8'
  
 [colors.cursor]
-text = '#e1e2e8'
-cursor = '#c3c6cf' 
+text = '#f0dfd8'
+cursor = '#d7c2b9' 
  
 [colors.vi_mode_cursor]
-text = '#111418'
-cursor = '#a2c9fe' 
+text = '#1a120e'
+cursor = '#ffb691' 
  
 [colors.search.matches]
-foreground = '#43474e' 
-background = '#d8bde4' 
+foreground = '#52443d' 
+background = '#cfc890' 
  
 [colors.search.focused_match]
-foreground = '#43474e' 
-background = '#a2c9fe' 
+foreground = '#52443d' 
+background = '#ffb691' 
  
 [colors.footer_bar]
-foreground = '#43474e' 
-background = '#e1e2e8' 
+foreground = '#52443d' 
+background = '#f0dfd8' 
  
 [colors.hints.start]
-foreground = '#43474e' 
-background = '#bbc7db' 
+foreground = '#52443d' 
+background = '#e6beac' 
  
 [colors.hints.end]
-foreground = '#43474e' 
-background = '#bbc7db' 
+foreground = '#52443d' 
+background = '#e6beac' 
  
 [colors.selection]
-text = '#111418'
-background = '#a2c9fe'
+text = '#1a120e'
+background = '#ffb691'
  
  
 [colors.normal]
 black = '#181818' 
 red = '#ffb4ab' 
-green = '#a2c9fe' 
-yellow = '#38608f' 
-blue = '#a2c9fe' 
-magenta = '#d8bde4' 
-cyan = '#bbc7db' 
+green = '#ffb691' 
+yellow = '#8d4e2b' 
+blue = '#ffb691' 
+magenta = '#cfc890' 
+cyan = '#e6beac' 
 white = '#BAC2DE' 
  
  
